Change label text from '记录来时的路' to '彳亍'

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <div class="author flex flex-col justify-center my-2.5 mx-0">
                     <div class="name">Juana_2u</div>
                     
-                        <div class="label">记录来时的路</div>
+                        <div class="label">彳亍</div>
                     
                 </div>
                 <div class="statistics">
